--- a/learning_ops_fe/package.json
+++ b/learning_ops_fe/package.json
@@ -16,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gp": "git push -u origin main",
+    "gc": "git commit -m "
   },
   "eslintConfig": {
     "extends": [
