--- a/learning_ops_fe/package.json
+++ b/learning_ops_fe/package.json
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "y": "yarn",
     "gp": "git push -u origin main",
     "gc": "git commit -m "
   },
